This is the first implementation of teh device registration logic.
